--- a/WPF_app_auftrag/MainWindow.xaml
+++ b/WPF_app_auftrag/MainWindow.xaml
@@ -20,9 +20,15 @@
             <RowDefinition Height="53"/>
             <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="StartText" Grid.Column="0" Grid.Row="0" Text="Start Text" FontSize="30" Margin="20,20,20,20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        <Button x:Name="textbutton" Content="Change Text" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
-        <Button x:Name="colorbutton" Content="Change Color" Grid.Column="0" Grid.Row="3" Click="Button_Click_1"/>
-        <Button x:Name="layoutbutton" Content="Add new layout" Grid.Column="0" Grid.Row="5" Click="layoutbutton_Click"/>
+        <Grid>
+            <StackPanel x:Name="LeftPanel" Grid.Column="0" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left">
+                <Label x:Name="StartLabel" Grid.Column="0" Grid.Row="0" Content="Start Text" FontSize="30" Margin="20,20,20,20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Button x:Name="textbutton" Content="Change Text" Grid.Column="0" Grid.Row="1" Click="Button_Click"/>
+                <Button x:Name="colorbutton" Content="Change Color" Grid.Column="0" Grid.Row="3" Click="Button_Click_1"/>
+            </StackPanel>
+            <StackPanel x:Name="RightPanel" Grid.Column="1" Grid.Row="0" VerticalAlignment="Top" HorizontalAlignment="Left">
+            </StackPanel>
+            <Button x:Name="layoutbutton" Content="Add new layout" Grid.Column="0" Grid.Row="5" Click="layoutbutton_Click"/>
+        </Grid>
     </Grid>
 </Window>
